--- a/front/public/index.html
+++ b/front/public/index.html
@@ -3,8 +3,13 @@
 	<head>
 		<meta charset="utf-8" />
 		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+		/>
+		
+		<link
 			rel="icon"
-			href="%PUBLIC_URL%/favicon.ico"
+			href="%PUBLIC_URL%/favicon.svg"
 		/>
 		<meta
 			name="viewport"
@@ -20,7 +25,7 @@
 		/>
 		<link
 			rel="apple-touch-icon"
-			href="%PUBLIC_URL%/logo192.png"
+			href="%PUBLIC_URL%/favicon.svg"
 		/>
 		<!--
       manifest.json provides metadata used when your web app is installed on a
@@ -40,10 +45,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 		<title>Plant Parents</title>
-		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-		/>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
